k8s/envs/dev-eks/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phrasify-ingress
  namespace: phrasify
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
  - host: phrasify.mvdvlies.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phrasify-service
            port:
              number: 8800
